<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/storage_item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/storage_tv_rfid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rfid"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorImageBg"/>

        <TextView
            android:id="@+id/storage_tv_buy_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/buy_company"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorImageBg"/>

        <TextView
            android:id="@+id/storage_tv_box_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/box_type" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorImageBg"/>

        <TextView
            android:id="@+id/storage_tv_box_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/box_price" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorImageBg"/>

        <TextView
            android:id="@+id/storage_tv_box_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/box_num" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorImageBg"/>

        <TextView
            android:id="@+id/storage_tv_pre_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pre_time" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorImageBg"/>

</LinearLayout>