<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/storage_view_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/storage_btn_ensure"
        android:textSize="@dimen/storage_text_size"
        android:textColor="@color/colorText"
        android:background="@drawable/spinner_border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/storage_view_margin"
        android:background="@drawable/spinner_border"
        android:padding="@dimen/storage_layout_padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/storage_view_margin"
            android:layout_marginStart="@dimen/storage_view_margin"
            android:layout_marginEnd="@dimen/storage_view_margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="@string/buy_company_"/>
            <TextView
                android:id="@+id/storage_ensure_tv_buy_company"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="@string/buy_company"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/storage_view_margin"
            android:layout_marginStart="@dimen/storage_view_margin"
            android:layout_marginEnd="@dimen/storage_view_margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="@string/need_time_"/>
            <TextView
                android:id="@+id/storage_ensure_tv_need_time"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="需求时间"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/storage_view_margin"
            android:layout_marginStart="@dimen/storage_view_margin"
            android:layout_marginEnd="@dimen/storage_view_margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="@string/buy_time_"/>
            <TextView
                android:id="@+id/storage_ensure_tv_buy_time"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="购买时间"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/storage_view_margin"
            android:layout_marginStart="@dimen/storage_view_margin"
            android:layout_marginEnd="@dimen/storage_view_margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="@string/for_project_"/>
            <EditText
                android:id="@+id/storage_ensure_edt_for_project"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="@dimen/storage_text_size"
                android:background="@drawable/spinner_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/storage_view_margin"
            android:layout_marginStart="@dimen/storage_view_margin"
            android:layout_marginEnd="@dimen/storage_view_margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="@string/supplier_name_"/>
            <EditText
                android:id="@+id/storage_ensure_edt_supplier"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="@dimen/storage_text_size"
                android:background="@drawable/spinner_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/storage_view_margin"
            android:layout_marginStart="@dimen/storage_view_margin"
            android:layout_marginEnd="@dimen/storage_view_margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="@string/attrition_rate_"/>
            <EditText
                android:id="@+id/storage_ensure_edt_attrition_rate"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:maxLines="1"
                android:inputType="numberDecimal|number"
                android:textSize="@dimen/storage_text_size"
                android:background="@drawable/spinner_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/storage_view_margin"
            android:layout_marginStart="@dimen/storage_view_margin"
            android:layout_marginEnd="@dimen/storage_view_margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:textSize="@dimen/storage_text_size"
                android:text="@string/use_life_"/>
            <EditText
                android:id="@+id/storage_ensure_edt_use_life"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:maxLines="1"
                android:inputType="numberDecimal|number"
                android:textSize="@dimen/storage_text_size"
                android:background="@drawable/spinner_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/storage_view_margin"
            android:layout_marginStart="@dimen/storage_view_margin"
            android:layout_marginEnd="@dimen/storage_view_margin">
            <Button
                android:id="@+id/storage_ensure_btn_confirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/outbound_btn_height"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/storage_btn_margin_fluctuate"
                android:background="@drawable/btn_bg"
                android:orientation="horizontal"
                android:text="@string/confirm"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="@dimen/storage_view_margin"
                android:textSize="@dimen/storage_text_size" />
            <Button
                android:id="@+id/storage_ensure_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/outbound_btn_height"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/storage_btn_margin_fluctuate"
                android:background="@drawable/btn_bg"
                android:orientation="horizontal"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/storage_text_size" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>